# agentic-research

./: .gitignore  README.md
agent/: .env.example  .gitignore  main.py  pyproject.toml
agent/agent/: graph.py  nodes.py  state.py  tools.py
agent/agent/nodes/: __init__.py  aggregate.py  analyst.py  planner.py  synthesizer.py  tools.py
agent/agent/prompts/: __init__.py  analyst.py  planner.py  searcher.py  synthesizer.py
agent/config/: settings.py
agent/tests/: test_api.py
app/: package-lock.json  package.json
app/src/main/: index.js
app/src/preload/: index.js
app/src/renderer/: index.html
app/src/renderer/src/: App.jsx  index.css
server/: .env.example  Makefile  pyproject.toml
server/agent/: nodes.py  prompts.py
server/api/: main.py  schemas.py
server/api/routes/: agent.py
server/config/: settings.py
server/tests/: test_agent.py
